# cracked-open-sesame-hackathon

./: .gitignore  docker-compose.yml
backend/: .env.example  agents.py  main.py  requirements.txt
backend/agents/: agents.py
backend/app/core/: config.py
my-app/: .gitignore  package-lock.json  package.json
my-app/app/: page.tsx
my-app/app/api/submitform/: route.ts
my-app/app/components/: BrowserView.tsx  Dashboard.module.css  Dashboard.tsx  Form.module.css  Form.tsx  Metrics.module.css  Metrics.tsx
solaris-browse/: README.md  claude.py  main.py  pyproject.toml
solaris-browse/app/agents/: __init__.py  agents.py  router.py
solaris-browse/app/core/: __init__.py  config.py
solaris-browse/app/db/: __init__.py  database.py  migrate.py  models.py
solaris-browse/app/sessions/: __init__.py  router.py
solaris-browse/migrations/: 01_create_tables.sql
